[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/img/borders/box.jpg" type="Texture" id=1]
[ext_resource path="res://src/img/background.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/TestCard.gd" type="Script" id=3]

[node name="TestCard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -568.0
margin_top = -290.5
margin_right = 568.0
margin_bottom = 290.5
texture = ExtResource( 1 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="NinePatchRect"]
margin_left = 140.44
margin_top = 78.2202
margin_right = 1002.44
margin_bottom = 218.22
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "texto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opt1" type="TextureButton" parent="NinePatchRect"]
margin_left = 68.4217
margin_top = 249.55
margin_right = 393.422
margin_bottom = 490.55
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="img" type="NinePatchRect" parent="NinePatchRect/opt1"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opt2" type="TextureButton" parent="NinePatchRect"]
margin_left = 405.065
margin_top = 249.546
margin_right = 730.065
margin_bottom = 490.546
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="img" type="NinePatchRect" parent="NinePatchRect/opt2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opt3" type="TextureButton" parent="NinePatchRect"]
margin_left = 742.352
margin_top = 250.182
margin_right = 1067.35
margin_bottom = 491.182
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="img" type="NinePatchRect" parent="NinePatchRect/opt3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.141
margin_top = -54.119
margin_right = 182.859
margin_bottom = 49.881
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="NinePatchRect/NinePatchRect"]
margin_left = 135.318
margin_top = 32.5186
margin_right = 213.318
margin_bottom = 75.5186
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pregunta"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NinePatchRect/opt1" to="." method="_on_opt1_pressed"]
[connection signal="pressed" from="NinePatchRect/opt2" to="." method="_on_opt2_pressed"]
[connection signal="pressed" from="NinePatchRect/opt3" to="." method="_on_opt3_pressed"]
